--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Landing Page - Start Bootstrap Theme</title>
+    <title>convieLte</title>
 
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -43,17 +43,11 @@
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="container">
-            <a class="navbar-brand" href="#">Start Bootstrap</a>
+            <a class="navbar-brand" href="#">ICOM 4036 Final Project</a>
             <div class="collapse navbar-collapse" id="navbarExample">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item">
-                        <a class="nav-link" href="#">About</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Services</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Contact</a>
+                        <a class="nav-link" href="#">convieLte Documentation</a>
                     </li>
                 </ul>
             </div>
@@ -64,18 +58,13 @@
     <header class="intro-header">
         <div class="container">
             <div class="intro-message">
-                <h1>Landing Page</h1>
-                <h3>A Template by Start Bootstrap</h3>
+            <iframe width="640" height="360" src="https://www.youtube.com/embed/PKBDyKtwGng?rel=0&amp;controls=0&amp;showinfo=0" frameborder="0" allowfullscreen></iframe>
+                <h1>convieLte</h1>
+                <h3>A programing language to easily convert between units and more...</h3>
                 <hr class="intro-divider">
                 <ul class="list-inline intro-social-buttons">
                     <li class="list-inline-item">
-                        <a href="#" class="btn btn-secondary btn-lg"><i class="fa fa-twitter fa-fw"></i> <span class="network-name">Twitter</span></a>
-                    </li>
-                    <li class="list-inline-item">
-                        <a href="#" class="btn btn-secondary btn-lg"><i class="fa fa-github fa-fw"></i> <span class="network-name">Github</span></a>
-                    </li>
-                    <li class="list-inline-item">
-                        <a href="#" class="btn btn-secondary btn-lg"><i class="fa fa-linkedin fa-fw"></i> <span class="network-name">Linkedin</span></a>
+                        <a href="https://github.com/chiscojfr/convielte/tree/master/convieLte" class="btn btn-secondary btn-lg"><i class="fa fa-github fa-fw"></i> <span class="network-name">Github</span></a>
                     </li>
                 </ul>
             </div>
@@ -83,46 +72,6 @@
     </header>
 
     <!-- Page Content -->
-    <section class="content-section-a">
-
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-5">
-                    <hr class="section-heading-spacer">
-                    <div class="clearfix"></div>
-                    <h2 class="section-heading">Death to the Stock Photo:<br>Special Thanks</h2>
-                    <p class="lead">A special thanks to <a target="_blank" href="http://join.deathtothestockphoto.com/">Death to the Stock Photo</a> for providing the photographs that you see in this template. Visit their website to become a member.</p>
-                </div>
-                <div class="col-lg-5 offset-lg-2">
-                    <img class="img-fluid" src="img/ipad.png" alt="">
-                </div>
-            </div>
-
-        </div>
-        <!-- /.container -->
-    </section>
-
-    <section class="content-section-b">
-
-        <div class="container">
-
-            <div class="row">
-                <div class="col-lg-5 push-lg-7">
-                    <hr class="section-heading-spacer">
-                    <div class="clearfix"></div>
-                    <h2 class="section-heading">3D Device Mockups<br>by PSDCovers</h2>
-                    <p class="lead">Turn your 2D designs into high quality, 3D product shots in seconds using free Photoshop actions by <a target="_blank" href="http://www.psdcovers.com/">PSDCovers</a>! Visit their website to download some of their awesome, free photoshop actions!</p>
-                </div>
-                <div class="col-lg-5 pull-lg-5">
-                    <img class="img-fluid" src="img/dog.png" alt="">
-                </div>
-            </div>
-
-        </div>
-        <!-- /.container -->
-
-    </section>
-    <!-- /.content-section-b -->
 
     <section class="content-section-a">
 
@@ -132,11 +81,11 @@
                 <div class="col-lg-5">
                     <hr class="section-heading-spacer">
                     <div class="clearfix"></div>
-                    <h2 class="section-heading">Google Web Fonts and<br>Font Awesome Icons</h2>
-                    <p class="lead">This template features the 'Lato' font, part of the <a target="_blank" href="http://www.google.com/fonts">Google Web Font library</a>, as well as <a target="_blank" href="http://fontawesome.io">icons from Font Awesome</a>.</p>
+                    <h2 class="section-heading">Do not spend time doing conversions using traditional formulas.</h2>
+                    <p class="lead">Use convieLte!</p>
                 </div>
                 <div class="col-lg-5 offset-lg-2">
-                    <img class="img-fluid" src="img/phones.png" alt="">
+                    <img class="img-fluid" src="img/engineering.jpg" alt="">
                 </div>
             </div>
 
@@ -152,18 +101,12 @@
 
             <div class="row">
                 <div class="col-lg-6">
-                    <h2>Connect to Start Bootstrap:</h2>
+                    <h2>Enter to github to get convieLte:</h2>
                 </div>
                 <div class="col-lg-6">
                     <ul class="list-inline banner-social-buttons">
                         <li class="list-inline-item">
-                            <a href="#" class="btn btn-secondary btn-lg"><i class="fa fa-twitter fa-fw"></i> <span class="network-name">Twitter</span></a>
-                        </li>
-                        <li class="list-inline-item">
                             <a href="#" class="btn btn-secondary btn-lg"><i class="fa fa-github fa-fw"></i> <span class="network-name">Github</span></a>
-                        </li>
-                        <li class="list-inline-item">
-                            <a href="#" class="btn btn-secondary btn-lg"><i class="fa fa-linkedin fa-fw"></i> <span class="network-name">Linkedin</span></a>
                         </li>
                     </ul>
                 </div>
@@ -178,24 +121,7 @@
     <!-- Footer -->
     <footer>
         <div class="container">
-            <ul class="list-inline">
-                <li class="list-inline-item">
-                    <a href="#">Home</a>
-                </li>
-                <li class="footer-menu-divider list-inline-item">&sdot;</li>
-                <li class="list-inline-item">
-                    <a href="#about">About</a>
-                </li>
-                <li class="footer-menu-divider list-inline-item">&sdot;</li>
-                <li class="list-inline-item">
-                    <a href="#services">Services</a>
-                </li>
-                <li class="footer-menu-divider list-inline-item">&sdot;</li>
-                <li class="list-inline-item">
-                    <a href="#contact">Contact</a>
-                </li>
-            </ul>
-            <p class="copyright text-muted small">Copyright &copy; Your Company 2017. All Rights Reserved</p>
+            <p class="copyright text-muted small"><b>Made with <i class="fa fa-heart" aria-hidden="true"></i> by: Karla Valcárcel, Tamara Gonzalez, Ricardo A. Casares & José F. Rodríguez </b><br>Copyright &copy; convieLte 2017. All Rights Reserved</p>
         </div>
     </footer>
 
@@ -207,3 +133,4 @@
 </body>
 
 </html>
+
