--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             <div class="collapse navbar-collapse" id="navbarExample">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item">
-                        <a class="nav-link" href="#">convieLte Documentation</a>
+                        <a class="nav-link" href="https://github.com/chiscojfr/convielte/blob/master/convieLte/PL_project_phase3.pdf">convieLte Documentation</a>
                     </li>
                 </ul>
             </div>
