--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                     <hr class="section-heading-spacer">
                     <div class="clearfix"></div>
                     <h2 class="section-heading">Do not spend time doing conversions using traditional formulas.</h2>
-                    <p class="lead">Use convieLte!</p>
+                    <p class="lead">Get them fast with ConvieLte!</p>
                 </div>
                 <div class="col-lg-5 offset-lg-2">
                     <img class="img-fluid" src="img/engineering.jpg" alt="">
@@ -106,7 +106,7 @@
                 <div class="col-lg-6">
                     <ul class="list-inline banner-social-buttons">
                         <li class="list-inline-item">
-                            <a href="#" class="btn btn-secondary btn-lg"><i class="fa fa-github fa-fw"></i> <span class="network-name">Github</span></a>
+                            <a href="https://github.com/chiscojfr/convielte/tree/master/convieLte" class="btn btn-secondary btn-lg"><i class="fa fa-github fa-fw"></i> <span class="network-name">Github</span></a>
                         </li>
                     </ul>
                 </div>
