--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                 <div class="col-lg-6">
                     <ul class="list-inline banner-social-buttons">
                         <li class="list-inline-item">
-                            <a href="https://github.com/chiscojfr/convielte/tree/master/convieLte" class="btn btn-secondary btn-lg"><i class="fa fa-github fa-fw"></i> <span class="network-name">Github</span></a>
+                            <a href="https://github.com/chiscojfr/convielte/raw/master/convieLte/convieLte.zip" class="btn btn-secondary btn-lg"><i class="fa fa-github fa-fw"></i> <span class="network-name">Download  convieLte.zip from Github</span></a>
                         </li>
                     </ul>
                 </div>
