--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 
     <!-- Page Content -->
 
-    <section class="content-section-a">
+     <section class="content-section-a">
 
         <div class="container">
 
@@ -81,7 +81,7 @@
                 <div class="col-lg-5">
                     <hr class="section-heading-spacer">
                     <div class="clearfix"></div>
-                    <h2 class="section-heading">Do not spend time doing conversions using traditional formulas.</h2>
+                    <h2 class="section-heading">Don't spend time doing conversions using traditional formulas.</h2>
                     <p class="lead">Get them fast with ConvieLte!</p>
                 </div>
                 <div class="col-lg-5 offset-lg-2">
@@ -93,7 +93,52 @@
         <!-- /.container -->
 
     </section>
-    <!-- /.content-section-a -->
+    
+    <section class="content-section-a">
+
+        <div class="container">
+
+            <div class="row">
+                <div class="col-lg-5 offset-lg-2">
+                    <img class="img-fluid" src="https://pi.tedcdn.com/r/pf.tedcdn.com/images/playlists/find_your_purpose_1080425149.jpg?quality=89&w=256" alt="">
+                </div>
+                <div class="col-lg-5">
+                    <hr class="section-heading-spacer">
+                    <div class="clearfix"></div>
+                    <h2 class="section-heading">Our motivation...</h2>
+                    <p class="lead">Have a system which we can convert any kind of units, and with that solve physics and electronic circuits problems. All of this in the same platform.</p>
+                </div>
+            </div>
+
+        </div>
+        <!-- /.container -->
+
+    </section>
+
+    <section class="content-section-a">
+
+        <div class="container">
+
+            <div class="row">
+                <div class="col-lg-5">
+                    <hr class="section-heading-spacer">
+                    <div class="clearfix"></div>
+                    <h2 class="section-heading">Program features:</h2>
+                    <ul class="lead">
+                        <li>Convert between units of any type of measurement</li>
+                        <li>Store these values in variables to use in other funtions</li>
+                        <li>Resolve basics problems of physics and electrical engineering.</li>
+                    </ul>
+                </div>
+                <div class="col-lg-5 offset-lg-2">
+                    <img class="img-fluid" style="margin-top: 14%;" src="http://www.gc-solutions.net/images/article/new-features-in-articulate-storyline-version-their-use.png" alt="">
+                </div>
+            </div>
+
+        </div>
+        <!-- /.container -->
+
+    </section>
 
     <aside class="banner">
 
@@ -101,12 +146,12 @@
 
             <div class="row">
                 <div class="col-lg-6">
-                    <h2>Enter to github to get convieLte:</h2>
+                    <h2>Enter to github and get convieLte:</h2>
                 </div>
                 <div class="col-lg-6">
                     <ul class="list-inline banner-social-buttons">
                         <li class="list-inline-item">
-                            <a href="https://github.com/chiscojfr/convielte/raw/master/convieLte/convieLte.zip" class="btn btn-secondary btn-lg"><i class="fa fa-github fa-fw"></i> <span class="network-name">Download  convieLte.zip from Github</span></a>
+                            <a href="https://github.com/chiscojfr/convielte/raw/master/convieLte/convieLte.zip" class="btn btn-secondary btn-lg"><i class="fa fa-github fa-fw"></i> <span class="network-name">Download convieLte.zip file</span></a>
                         </li>
                     </ul>
                 </div>
@@ -133,4 +178,5 @@
 </body>
 
 </html>
+
 
