--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                 <hr class="intro-divider">
                 <ul class="list-inline intro-social-buttons">
                     <li class="list-inline-item">
-                        <a href="https://github.com/chiscojfr/convielte/tree/master/convieLte" class="btn btn-secondary btn-lg"><i class="fa fa-github fa-fw"></i> <span class="network-name">Github</span></a>
+                        <a href="https://github.com/chiscojfr/convielte/tree/master/convieLte" class="btn btn-secondary btn-lg"><i class="fa fa-github fa-fw"></i> <span class="network-name">View on Github</span></a>
                     </li>
                 </ul>
             </div>
